[tool.poetry]
name = "hue-switch"
version = "0.1.0"
description = ""
authors = ["bradj121 <bradj121@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
hue-py = "^0.3.1"
"RPi.GPIO" = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
